# nuclear-eng-ai-assistant

./: .gcloudignore  .gitignore  Dockerfile  PROMPT-NUCLEAR-AI-ASSISTANT.md  README.md  SPEC-NUCLEAR-AI-ASSISTANT.md  cloudbuild.yaml  demo_prompt_2.txt  ingest_docs.py  list_docs.py  pyproject.toml  query.py  query_test.py  recruiter_email.txt  screening_test.py  start_and_test.sh  test_api.py
data/sample_documents/: Turkey_Point_UFSAR_Main_Steam.txt
docs/: ADK_REFACTOR_PROMPT.md  PROMPT-NUCLEAR-AI-ASSISTANT.md  SPEC-NUCLEAR-AI-ASSISTANT.md  adk_architecture.md  corpus_strategy.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  CitationTable.tsx  DocumentUpload.tsx  PreliminaryBanner.tsx  ScreeningForm.tsx
scripts/: create_docai.py  download_pdfs.py  load_seed_corpus.py  reindex_corpus.py  verify_retrieval.py  verify_targeted.py
src/: config.py  main.py
src/agents/: comparison.py  retrieval.py  screening.py  summarization.py
src/api/: audit.py  compare.py  documents.py  query.py  screening.py  summarize.py
src/generation/: citations.py  gemini.py  templates.py
src/ingestion/: chunker.py  embedder.py  ocr.py  pipeline.py
src/models/: audit.py  document.py  query.py  retrieval.py  screening.py
src/nuclear_eng_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/retrieval/: reranker.py  search.py
src/storage/: bigquery.py  firestore.py  gcs.py
tests/: test_firestore_vector_search.py  test_retrieval_tool.py  test_screening_grounding.py
(+13 files in other folders)
